--- a/ASTR519Project/TurboProject.ipynb
+++ b/ASTR519Project/TurboProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 1108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 1109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 1110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5792778900466092\n"
+      "Mean Squared Error: 0.43044588396500094\n"
      ]
     }
    ],
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 1111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.7207321862470238\n"
+      "Mean Squared Error: 0.5909877748091125\n"
      ]
     }
    ],
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 1112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5713165137403894\n"
+      "Mean Squared Error: 0.5308740409571773\n"
      ]
     }
    ],
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 1113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.41754622494260474\n"
+      "Mean Squared Error: 0.3699462222797186\n"
      ]
     }
    ],
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 1114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5566523463576357\n"
+      "Mean Squared Error: 0.5514289965237567\n"
      ]
     }
    ],
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 1115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.4180450038565278\n"
+      "Mean Squared Error: 0.37088643939598764\n"
      ]
     }
    ],
@@ -318,6 +318,139 @@
     "print(f'Mean Squared Error: {mse}')\n",
     "\n",
     "##oddly enough there seems to be some strong coorellation between age ans distance???????"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.5021635359245856\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Now, not too many of these stars had metallicity values, so lets try to expand our set\n",
+    "\n",
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'OPEN STAR CLUSTER':\n",
+    "            tempList = [lii[i], bii[i], ra[i], dec[i], core_radius[i], num_core_stars[i], distance[i], reddening[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "\n",
+    "# Create a decision tree regressor\n",
+    "model = DecisionTreeRegressor(max_depth=5)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.497713814964941\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Now, not too many of these stars had metallicity values, so lets try to expand our set by removing metallicity as a parameter\n",
+    "\n",
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'OPEN STAR CLUSTER':\n",
+    "            tempList = [lii[i], bii[i], core_radius[i], num_core_stars[i], reddening[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "# Create a decision tree regressor\n",
+    "model = DecisionTreeRegressor(max_depth=5)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.6757070310199671\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Now, not too many of these stars had metallicity values, so lets try to expand our set\n",
+    "\n",
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'OPEN STAR CLUSTER':\n",
+    "            tempList = [distance[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "\n",
+    "# Create a decision tree regressor\n",
+    "model = DecisionTreeRegressor(max_depth=5)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "\n",
+    "## Ok at least this is worse now"
    ]
   }
  ],
