added some random forest stuff

--- a/ASTR519Project/TurboProject.ipynb
+++ b/ASTR519Project/TurboProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "from sklearn.datasets import make_blobs\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.metrics import mean_squared_error"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 1128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 1129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.43044588396500094\n"
+      "Mean Squared Error: 0.40824505050787496\n"
      ]
     }
    ],
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 1130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5909877748091125\n"
+      "Mean Squared Error: 0.6484990900713317\n"
      ]
     }
    ],
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1112,
+   "execution_count": 1131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5308740409571773\n"
+      "Mean Squared Error: 0.4349878289652825\n"
      ]
     }
    ],
@@ -193,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1113,
+   "execution_count": 1132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.3699462222797186\n"
+      "Mean Squared Error: 0.4590359429127542\n"
      ]
     }
    ],
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 1133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5514289965237567\n"
+      "Mean Squared Error: 0.4980529463380047\n"
      ]
     }
    ],
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1115,
+   "execution_count": 1134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.37088643939598764\n"
+      "Mean Squared Error: 0.37463165841701357\n"
      ]
     }
    ],
@@ -322,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1116,
+   "execution_count": 1135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.5021635359245856\n"
+      "Mean Squared Error: 0.5120641085029333\n"
      ]
     }
    ],
@@ -366,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1126,
+   "execution_count": 1136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.497713814964941\n"
+      "Mean Squared Error: 0.5239586720733944\n"
      ]
     }
    ],
@@ -409,14 +409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1118,
+   "execution_count": 1137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.6757070310199671\n"
+      "Mean Squared Error: 0.6940993221290948\n"
      ]
     }
    ],
@@ -452,6 +452,150 @@
     "\n",
     "## Ok at least this is worse now"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.3228064650198306\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Now lets try it with random forest\n",
+    "\n",
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(metallicity[i] or lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'OPEN STAR CLUSTER':\n",
+    "            tempList = [lii[i], bii[i], ra[i], dec[i], core_radius[i], num_core_stars[i], distance[i], reddening[i], metallicity[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "\n",
+    "# Create a decision tree regressor\n",
+    "model = RandomForestRegressor(max_depth=10, n_estimators=100)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "\n",
+    "# Random forest seems to offer slightly better results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n",
+      "Mean Squared Error: 0.0016258986486485216\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Lets try with globs now\n",
+    "\n",
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(metallicity[i] or lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'GLOBULAR CLUSTER EXTENDED GALACTIC OR EXTRAGALACTIC':\n",
+    "            tempList = [lii[i], bii[i], ra[i], dec[i], core_radius[i], num_core_stars[i], distance[i], reddening[i], metallicity[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "print(len(cluster_age_matrix_supreme))\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "\n",
+    "# Create a decision tree regressor\n",
+    "model = RandomForestRegressor(max_depth=10, n_estimators=100)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "\n",
+    "##sorta sucks since all of them are around the same age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n",
+      "Mean Squared Error: 0.0036723323551740143\n"
+     ]
+    }
+   ],
+   "source": [
+    "cluster_data_matrix_supreme = []\n",
+    "cluster_age_matrix_supreme = []\n",
+    "\n",
+    "for i in range(sourceLength):\n",
+    "    if np.isnan(metallicity[i] or lii[i] or bii[i] or ra[i] or dec[i] or core_radius[i] or num_core_stars[i] or distance[i] or reddening[i] or log_age[i]) == False:\n",
+    "        if classification[i] == 'GLOBULAR CLUSTER EXTENDED GALACTIC OR EXTRAGALACTIC':\n",
+    "            tempList = [metallicity[i]]\n",
+    "            cluster_data_matrix_supreme.append(tempList)\n",
+    "            cluster_age_matrix_supreme.append(log_age[i])\n",
+    "print(len(cluster_age_matrix_supreme))\n",
+    "\n",
+    "cluster_train, cluster_test, age_train, age_test = train_test_split(cluster_data_matrix_supreme, cluster_age_matrix_supreme, test_size=0.5)\n",
+    "\n",
+    "# Create a decision tree regressor\n",
+    "model = RandomForestRegressor(max_depth=10, n_estimators=100)\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(cluster_train, age_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(cluster_test)\n",
+    "\n",
+    "mse = mean_squared_error(age_test, predictions)\n",
+    "# print(age_test)\n",
+    "# print(predictions)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "\n",
+    "##metallicity alone does provide the best fit so far, other useless parameters are tyipcally in the rmse range of 0.008 and metallicity consistenly gives around 0.002-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
