Final final Rf_Clusters commit

--- a/Rf_Clusters.ipynb
+++ b/Rf_Clusters.ipynb
@@ -500,6 +500,80 @@
     "best_model = np.max(accuracy)\n",
     "print(best_model)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And now the same data set, but testing each parameter individually:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Cluster type: ', 'All'],\n",
+       " ['lii', 0.4948453608247423],\n",
+       " ['bii', 0.4484536082474227],\n",
+       " ['ra', 0.42783505154639173],\n",
+       " ['dec', 0.4742268041237113],\n",
+       " ['core_radius', 0.3865979381443299],\n",
+       " ['num_core_stars', 0.5257731958762887],\n",
+       " ['distance', 0.4690721649484536],\n",
+       " ['e_bv', 0.4536082474226804],\n",
+       " ['metallicity', 0.4690721649484536]]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = all_metal_df\n",
+    "data = data.reset_index(drop=True)\n",
+    "headers = data.columns\n",
+    "\n",
+    "lii = data['lii']\n",
+    "bii = data['bii']\n",
+    "ra = data['ra']\n",
+    "dec = data['dec']\n",
+    "core_radius = data['core_radius']\n",
+    "num_core_stars = data['num_core_stars']\n",
+    "distance = data['distance']\n",
+    "reddening = data['e_bv']\n",
+    "age_group = data['age_group']\n",
+    "metallicity = data['metallicity']\n",
+    "\n",
+    "param_list = [lii, bii, ra, dec, core_radius, num_core_stars, distance, reddening, metallicity]\n",
+    "cluster_age_matrix = []\n",
+    "param_success_matrix = []\n",
+    "param_success_matrix.append(['Cluster type: ','All'])\n",
+    "\n",
+    "for i in range(len(data)):\n",
+    "    cluster_age_matrix.append(age_group[i])\n",
+    "\n",
+    "for param in param_list:\n",
+    "    param_name = param.name\n",
+    "    param = param.to_numpy()\n",
+    "    param = param.reshape(-1, 1)\n",
+    "    a_cluster_train, a_cluster_test, a_age_train, a_age_test = train_test_split(param, cluster_age_matrix, test_size=0.5)\n",
+    "\n",
+    "    model = RandomForestClassifier(max_depth=5)\n",
+    "\n",
+    "    model.fit(a_cluster_train, a_age_train)\n",
+    "\n",
+    "    o_predictions = model.predict(a_cluster_test)\n",
+    "    accuracy = metrics.accuracy_score(a_predictions, a_age_test)\n",
+    "\n",
+    "    param_success_matrix.append([param_name, accuracy])\n",
+    "\n",
+    "param_success_matrix"
+   ]
   }
  ],
  "metadata": {
