--- a/TurboProject.ipynb
+++ b/TurboProject.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "## First I want to read in all the data \n",
     "\n",
-    "data = pd.read_csv('/Users/loggy/Desktop/Astr519_Homework/ASTR519Project/MWSC Catalogue - Sheet1.csv')\n",
+    "data = pd.read_csv('MWSC_Catalog.csv')\n",
     "\n",
     "lii = data['lii']\n",
     "bii = data['bii']\n",
@@ -5218,7 +5218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
